--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
     types: [created]
 
 jobs:
-  publish-npm:
+  builds:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
