--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,16 +3,29 @@
 
 name: Publish
 
+# Controls when the workflow will run
 on:
-  release:
-    types: [created]
+  # Triggers the workflow on push or pull request events but only for the "move-to-dev" branch
+  push:
+    branches: [ "dev" ]
+  pull_request:
+    branches: [ "dev" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
-  builds:
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      # Runs a set of commands using the runners shell
+      - name: Login & Publish
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
